sumo/tests/traci/ChangeVehicleValue/ChangeTarget/InvalidNodeId/testclient.prog
simstep 1 1
setvalue 0xc4 0x31 xxx <string> e_vo0
simstep 1 1
